apps/gitea/components/tailscale/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: git
  namespace: shikanime
  annotations:
    tailscale.com/hostname: git
    tailscale.com/tags: tag:gitea
spec:
  loadBalancerClass: tailscale
