apps/gitea/components/tailscale/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: git
  namespace: shikanime
  annotations:
    tailscale.com/hostname: git
    tailscale.com/proxy-class: nishir-gitea
    tailscale.com/tags: tag:git
spec:
  loadBalancerClass: tailscale
