apps/gitea/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: shikanime
  annotations:
    tailscale.com/proxy-class: nishir-gitea
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
